<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="350dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content"
        android:hint="@string/web_url" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="30dp"
        android:onClick="openWebsite"
        android:text="@string/open_website" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:hint="@string/golden_gate_bridge" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="30dp"
        android:onClick="openLocation"
        android:text="@string/open_location" />

    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="350dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content"
        android:hint="@string/share_hint" />

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="24dp"
        android:onClick="shareText"
        android:text="@string/share_this_text" />
</LinearLayout>